--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "i": "^0.3.6",
+    "npm": "^6.13.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:css start:react",
-  "build": "npm-run-all build:css build:react",
-  "start:react": "react-scripts start",
-  "watch:css": "postcss src/styles/index.css -o src/index.css -w",
-  "build:react": "react-scripts build",
-  "build:css": "postcss src/styles/index.css -o src/index.css",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
+    "build": "npm-run-all build:css build:react",
+    "start:react": "react-scripts start",
+    "watch:css": "postcss src/styles/index.css -o src/index.css -w",
+    "build:react": "react-scripts build",
+    "build:css": "postcss src/styles/index.css -o src/index.css",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
