--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "d3": "^5.15.0",
+    "google-maps-react": "^2.0.2",
     "i": "^0.3.6",
+    "moment": "^2.24.0",
     "npm": "^6.13.7",
     "react": "^16.12.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.12.0",
+    "react-geocode": "^0.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:css start:react",
