--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev":"nodemon ./bin/www",
+    "dev": "nodemon ./bin/www",
     "heroku-postbuild": "cd client && npm install && npm run build:react"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
+    "mongoose": "^5.9.3",
     "morgan": "~1.9.0",
     "node-fetch": "^2.6.0"
   }
